info bookmark design gap fix, map added

--- a/css/laptop.css
+++ b/css/laptop.css
@@ -366,11 +366,11 @@
 		flex-direction: column;
 		align-items: center;
 
-		padding-top: 10%;
+		padding-top: 5%;
 		padding-bottom: 15%;
 
 		/* height: 88vh; */
-		width: 80vh;
+		width: 40vw;
 		height: inherit;
 
 		overflow-x: hidden;
@@ -444,7 +444,10 @@
 	.info-text-container .info-heading {
 		font-weight: 900;
 	}
-	.info-text-container .info-text {
+	iframe {
+		margin-top: 5%;
+		width: 70%;
+		height: 14em;
 	}
 
 	/* ABOUT */
@@ -955,5 +958,18 @@
 	.tips-content::-webkit-scrollbar {
 		/* color: red; */
 		display: none;
+	}
+	.tips-text-container {
+		width: 70%;
+		display: grid;
+		text-align: center;
+		align-items: center;
+		justify-content: center;
+		overflow-wrap: anywhere;
+	}
+	.tips-bookmark iframe {
+		margin-top: 20%;
+		width: 10em;
+		height: 10em;
 	}
 }
