--- a/css/phone-portrait.css
+++ b/css/phone-portrait.css
@@ -441,6 +441,12 @@
 		font-weight: 900;
 	}
 
+	iframe {
+		margin-top: 5%;
+		width: 100%;
+		height: 10em;
+	}
+
 	/*ABOUT*/
 	.about-bookmark {
 		display: flex;
@@ -800,5 +806,16 @@
 	}
 	.tips-content::-webkit-scrollbar {
 		display: none;
+	}
+
+	.tips-text-container {
+		margin: 0px 0px 0px 0px;
+		display: grid;
+		text-align: center;
+		align-items: center;
+		justify-content: center;
+
+		overflow-wrap: anywhere;
+		font-size: 200%;
 	}
 }
